kustomize-source-apache/base/backup-viewer-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: backup-viewer
spec:
  containers:
  - name: backup-viewer
    image: bitnami/kubectl:latest
    command: ["sleep", "infinity"]
    volumeMounts:
    - name: backup-volume
      mountPath: /backup
  volumes:
  - name: backup-volume
    persistentVolumeClaim:
      claimName: backup-pvc
      accessModes:
      - ReadWriteMany
