kustomize-source-apache/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moodle-apache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: moodle-apache
  template:
    metadata:
      labels:
        app: moodle-apache
    spec:
      containers:
      - name: moodle-apache
        image: image-registry.apps.silver.devops.gov.bc.ca/aa0156-tools/dt-moodle-apache:PLACEHOLDER
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: moodle-data
          mountPath: /var/moodledata_secure
        - name: moodle-config
          mountPath: /var/www/html/config.php
          subPath: config.php
        - name: apache-config
          mountPath: /etc/apache2/sites-enabled
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Gi"
      volumes:
      - name: moodle-data
        persistentVolumeClaim:
          claimName: moodle-data
      - name: moodle-config
        configMap:
          name: moodle-custom-config
      - name: apache-config
        configMap:
          name: apache-config
