kustomize-source-apache/base/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle-redis
spec:
  selector:
    app: moodle-redis
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
