kustomize-source-apache/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moodle-apache
spec:
  selector:
    app: moodle-apache
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
