kustomize-source-apache/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: moodle-apache
spec:
  to:
    kind: Service
    name: moodle-apache
  port:
    targetPort: 8080
  tls:
    termination: edge
