kustomize-source-apache/base/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-moodle
spec:
  podSelector:
    matchLabels:
      app: moodle-apache
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - {}
  egress:
  - {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-mariadb
spec:
  podSelector:
    matchLabels:
      app: moodle
      tier: database
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: moodle-apache
    ports:
    - protocol: TCP
      port: 3306
